# ThreadXCpp

./: .gitignore  CMakeLists.txt  README.md
app/: README.md
app/include/: app.hpp  main.h
app/src/: CMakeLists.txt  app.cpp  main.cpp
app/startup/: STM32L476RGTx_FLASH.ld  mbed.ld  tx_initialize_low_level.S
cmake/: arm-gcc-cortex-m4.cmake  arm-gcc-cortex-toolchain.cmake  utilities.cmake
